@@ -37,6 +37,7 @@ Template for new versions:
 ## Fixes
 - `suspendmanager`: fix errors when constructing near the map edge
 - `gui/sandbox`: fix scrollbar moving double distance on click
+- `hide-tutorials`: fix the embark tutorial prompt sometimes not being skipped
 
 ## Misc Improvements
 
